[WGSL] Generated metal source does not compile https://bugs.webkit.org/show_bug.cgi?id=268242 rdar://121764913

Reviewed by Mike Wyrzykowski.

The GlobalVariablRewriter was using a HashSet to track reads, then using it to
insert the used parameters. However, since HashSets don't preserve order the
parameters could be inserted out of order. Replacing the HashSet with a
ListHashSet fixes the problem.

* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::visit):

Canonical link: https://commits.webkit.org/273755@main